--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,7 @@
 					<a routerLink="/" routerLinkActive="active" class="active">Product List</a>
 				</li>
 				<li role="presentation">
-					<a routerLink="/create" routerLinkActive="active">Create</a>
+					<a routerLink="/create" routerLinkActive="active">Create Product</a>
 				</li>
 			</ul>
 		</nav>
