--- a/src/app/Detail/detail.html
+++ b/src/app/Detail/detail.html
@@ -11,16 +11,16 @@
 					<td><label for="name">Name</label></td>
 					<td><span>{{product.name}}</span></td>
 				</tr>
-                <tr>
+				<tr>
 					<td><label for="price">Price</label></td>
-					<td><span>{{product.price}} INR</span></td>
+					<td><span>{{product.price | currencyFormat}}</span></td>
 				</tr>
-                <tr>
+				<tr>
 					<td><label for="category">Category</label></td>
 					<td><span>{{product.category.category}}</span></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
-    <button class="btn btn-primary" [routerLink]="['/']">Back To List</button>
+	<button class="btn btn-primary" [routerLink]="['/']">Back To List</button>
 </section>
