--- a/src/app/app.style.css
+++ b/src/app/app.style.css
@@ -24,3 +24,10 @@ html, body {
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
